# rust_learn

./: README.md  base.rs  rust_tips.md
base/Advanced‌_Trait/: Advanced‌_Trait.rs
base/Advanced‌_Type_Functions_Closures/: Advanced‌_Type_Functions_Closures.rs
base/Fearless_Concurrency/: Fearless_Concurrency.rs
base/Macro/: Macro.rs
base/Object_Oriented_Programming/: OOP.rs  lib.rs  main.rs
base/Patterns/: Patterns.rs
base/Unsafe/: Unsafe.rs
base/movie/: Cargo.toml
base/smart_pointer/: smart_pointer.r  smart_pointer.rs
base/test_attribute/: lib.rs
command-line-rust/: ReadMe.md
command-line-rust/Chapter_01_hello/: Cargo.toml
command-line-rust/Chapter_02_echor/: Cargo.toml  mk-outs.sh
command-line-rust/Chapter_03_catr/: Cargo.toml
command-line-rust/Chapter_03_catr/src/: lib.rs  main.rs
command-line-rust/Chapter_04_headr/: Cargo.toml
command-line-rust/Chapter_05_wcr/: Cargo.toml
command-line-rust/Chapter_06_uniqr/: Cargo.toml
command-line-rust/Chapter_07_findr/: Cargo.toml
command-line-rust/Chapter_08_cutr/: Cargo.toml
command-line-rust/Chapter_09_grepr/: Cargo.toml
command-line-rust/Chapter_10_commr/: Cargo.toml
command-line-rust/Chapter_11_tailr/: Cargo.toml
command-line-rust/Chapter_11_tailr/src/: main.rs
command-line-rust/Chapter_12_fortuner/: Cargo.toml
command-line-rust/Chapter_13_calr/: Cargo.toml
command-line-rust/Chapter_13_calr/src/: main.rs
command-line-rust/Chapter_14_lsr/: Cargo.toml
command-line-rust/Chapter_14_lsr/src/: main.rs  owner.rs
example/: example18.rs
example/TcpListener_hello/: 404.html
example/wh/: Cargo.toml
(+87 files in other folders)
