[package]
name = "catr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
rand = "0.9.2"

[dev-dependencies]
anyhow = "1.0.100"
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = { version = "0.9.2", features = ["std"] }
rand_distr = "0.5.1"
