[package]
name = "tailr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
once_cell = "1.21.3"
regex = "1.11.3"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.9.2"
sys-info = "0.9.1"
