[package]
name = "calr"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.48", features = ["derive"] }
itertools = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rand = "0.9.2"
sys-info = "0.9.1"
